src/styles.css
body {
  margin: 0px;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
  line-height: 1.5;
}

.headerContainer {
  width: 100vw;
  background-color: #24292e;
  color: white;
  height: 56px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  /* padding: 12px 0px; */
}

.headerMain {
  padding: 12px 16px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
  align-items: center;
}

.headerItems {
  display: flex;
  flex-direction: row;
}

.headerItem {
  padding: 5px;
}

.headerItemRowEnd {
  padding-right: 0px;
}

.main {
  display: flex;
  flex-direction: column;
  padding: 48px 16px;
  max-width: 1012px;
  margin: auto;
}

.mainHeader {
  font-size: 40px;
  text-align: center;
  font-family: Inter, -apple-system, BlinkMacSystemFont, Helvetica;
  font-weight: 500;
  line-height: 1.25;
  margin-bottom: 24px;
}

.mainDescription {
  font-size: 21px;
  font-weight: 400;
  text-align: center;
  margin-bottom: 28px;
}

.rolesAnchorsList {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  padding-bottom: 54px;
}

.role {
  font-size: 18px;
  font-weight: 300;
  text-decoration: unset;
  color: #0366d6;
}

.moreInfo {
  margin-bottom: 3px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.infoItem {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  padding-bottom: 40px;
}

.infoIcon {
  width: 106px;
  height: 80px;
  background-color: black;
  margin-bottom: 16px;
}

.infoHeader {
  font-size: 18px;
  font-weight: 400;
  line-height: 1;
  margin-bottom: 8px;
}

.infoText {
  font-size: 14px;
  color: #586069;
  margin-bottom: 10px;
}

.divider {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  margin-bottom: 16px;
}

.dividerLine {
  border-bottom: 1px solid #dfe2e5;
  width: 90vw;
  max-width: 300px;
}

.disclaimer {
  text-align: center;
  font-size: 14px;
  color: #586069;
  margin-bottom: 25px;
  font-style: italic;
}

.positionsContainer {
  margin-bottom: 40px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.positionsHeader {
  text-align: center;
  font-size: 32px;
  margin-bottom: 32px;
}

.positions {
  display: flex;
  flex-direction: column;
  width: 100%;
  max-width: 900px;
}

.positionContainer {
  width: 100%;
  border-bottom: 1px solid #e1e3e8;
}

.positionDefaultContainer {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
  padding: 24px 0px;
}

.positionDefaultContainer:hover {
  color: #0366d6;
}

.positionOpenings {
  display: flex;
  flex-direction: row;
}

.positionName, .positionOpeningsText {
  font-size: 19px;
  font-weight: 400;
  color: #586069;
}

.positionOpeningsText {
  margin-right: 14px;
}

.positionArrowContainer {
  display: flex;
}

.positionArrow {
  align-self: center;
}

.positionArrowHidden {
  display: none;
}

.positionsList {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.positionItemContainer {
  display: flex;
  flex-direction: column;
  font-size: 14px;
  margin-bottom: 18px;
}

.positionItemTitleContainer {
  margin-bottom: 4px;
}

.positionItemTitle {
  text-decoration: none;
  width: min-content;
}

.positionItemTitle:hover {
  text-decoration: underline;
}

.spinner {
  /* z-index: 100000; */
  height: 100px;
  width: 100px;
  border: 6px solid;
  border-color: transparent black black black;
  border-radius: 75px;
  animation: rotate 1.2s infinite linear, fadeIn 2.5s 1 linear;
  position: absolute;
  left: calc(50% - 50px);
  top: 45%;
}

.spinnerContainer {
  width: 100vw;
  height: calc(100vh - 110px);
  position: relative;
}

@keyframes rotate {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.jobDetailContainer {
  padding: 20px 10px 100px 10px;
  font-family: "Helvetica Neue", Helvetica, Arial, Helvetica, sans-serif;
  max-width: 700px;
  margin: auto;
}

.logoAndReferBtn {
  height: 78px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 10px;
}

.logo {
  height: 75px;
  width: 75px;
  background-color: black;
  border-radius: 50px;
}

.logoImg {
  height: 75px;
  width: 75px;
  border-radius: 50px;
}

.referA {
  background: #2975CA;
  font-weight: normal;
  padding: 12px 20px 14px 20px;
  font-size: 14px;
  line-height: 17px;
  border-radius: 3px;
  color: white;
  text-decoration: unset;
}

.referA:hover {
  /* background-color: #0000bf; */
}

.jobTabs {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin: auto;
  margin-top: 26px;
  margin-bottom: 28px;
}

.jobTabContainer {
  display: flex;
  flex-direction: row;
  max-height: 35px;
  position: relative;
}

.jobTabContainerRight {
  left: 10px;
}

.jobTabContainerLeft {
  right: 10px;
}

.jobTabActive {
  background-color: rgb(231, 231, 231);
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

.jobTabInactive {
  background-color: rgb(248, 248, 248);
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

.jobTabLeftActive {
  height: 100%;
  width: 25px;
  background-image: linear-gradient(150deg, rgb(255, 255, 255, 0) 45%, rgb(231, 231, 231) 5%);
}

.jobTabRightActive {
  height: 100%;
  width: 25px;
  background-image: linear-gradient(30deg, rgb(231, 231, 231) 55%, rgb(255, 255, 255, 0) 0%);
}

.jobTabLeftInactive {
  height: 100%;
  width: 25px;
  background-image: linear-gradient(150deg, rgb(255, 255, 255, 0) 45%, rgb(248, 248, 248) 5%);
}

.jobTabRightInactive {
  height: 100%;
  width: 25px;
  background-image: linear-gradient(30deg, rgb(248, 248, 248) 55%, rgb(255, 255, 255, 0) 0%);
}

.jobTitle {
  margin: 10px 0px 0px 0px;
  font-size: 28px;
  font-weight: bolder;
}

.jobSponsor {
  font-size: 16px;
}

.jobLocation {
  font-size: 13px;
  margin: 8px 0px;
  color: #757575;
}

.jobDescription {
  white-space: pre-line;
  margin: 14px 0px;
  line-height: 20px;
  font-size: 14px;
}

.qualificationsContainer {

}

.qualContainer {

}

.qualsHeader {
  font-size: 17px;
  font-weight: bolder;
  margin-bottom: 8px;
}

.qualsListing {
  margin: 8px 0px;
}

.qualText {
  margin-left: 20px;
  line-height: 18px;
  font-size: 13px;
  margin-bottom: 5px;
}

.qualTextStr {
  margin-left: 6px;
}

.moreInfoPs {
  margin-bottom: 60px;
}

.moreInfoP {
  margin: 18px 0px;
}

.moreInfoPHeader {
  font-size: 16px;
  font-weight: bolder;
  margin-bottom: 25px;
}

.moreInfoPBody {
  font-size: 14px;
  white-space: pre-line;
}

.referralModalContainer {
  z-index: 5;
  position: fixed;
  display: flex;
  top: 0px;
  left: 0px;
  height: 100%;
  width: 100%;
  background-color: rgb(0, 0, 0, 0.28);
}

.referralModal {
  z-index: 6;
  height: calc(100% - 280px);
  width: calc(100% - 125px);
  max-height: 620px;
  max-width: 450px;
  padding: 45px 25px;
  margin: auto;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  background-color: white;
  text-align: center;
  font-size: 22px;
}

.referralModalInputBtnWrapper {
  margin-top: 15px;
  position: relative;
  top: 20px;
}

.referralModalInput {
  height: 26px;
  width: calc(100% - 26px);
  border: 1px solid #00000061;
  border-radius: 6px;
  padding: 4px 12px;
  color: black;
  background-color: rgba(240, 248, 255, 0.23);
  font-size: 17px;
  margin: 15px 0px;
}

.referralModalInput::placeholder {
  text-align: center;
}

.referralModalSendBtn {
  width: 100%;
  background-color: #3d3dff;
  height: 35px;
  color: white;
  border-radius: 6px;
  font-size: 17px;
  border: 2px solid #00000057;
  font-weight: 450;
  letter-spacing: 1px;
  margin: 15px 0px;
}

.referralModalSendBtn:hover {
  background-color: #6060ff;
}

.referralModalLinkAnchor {
  font-size: 14px;
  text-overflow: ellipsis;
}

.referralModalLoading {
  z-index: 6;
  height: calc(100% - 380px);
  width: calc(100% - 125px);
  max-height: 620px;
  max-width: 450px;
  padding: 95px 25px;
  margin: auto;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  background-color: white;
  text-align: center;
}

.referralModalLoadingInformation {
  font-size: 26px;
}

.copyReferralLink {
  width: 165px;
  background-color: #3d3dff;
  height: 35px;
  color: white;
  border-radius: 6px;
  font-size: 17px;
  border: 2px solid #00000057;
  font-weight: 450;
  letter-spacing: 1px;
  margin: 15px 0px;
  align-self: center;
}

.spinnerCode {
  /* z-index: 100000; */
  height: 100px;
  width: 100px;
  border: 6px solid;
  border-color: transparent black black black;
  border-radius: 75px;
  animation: rotate 1.2s infinite linear, fadeIn 1.5s 1 linear;
  margin: auto;
  /* position: absolute;
  left: calc(50% - 50px);
  top: calc(50% - 150px); */
}

